feat: add keycloak and kafka with serverless architecture
